4.x: Unit test lambdaification 16 of N (#8157)
* 4.x: Unit test lambdaification 16 of N

* Fix naming convention mistake exposed by the lambda conversion