@@ -127,8 +127,8 @@ public class FlowableFlatMapTest extends RxJavaTest {
     @Test
     public void flatMapTransformsNormal() {
         Flowable<Integer> onNext = Flowable.fromIterable(Arrays.asList(1, 2, 3));
-        Flowable<Integer> onComplete = Flowable.fromIterable(Arrays.asList(4));
-        Flowable<Integer> onError = Flowable.fromIterable(Arrays.asList(5));
+        Flowable<Integer> onComplete = Flowable.fromIterable(List.of(4));
+        Flowable<Integer> onError = Flowable.fromIterable(List.of(5));
 
         Flowable<Integer> source = Flowable.fromIterable(Arrays.asList(10, 20, 30));
 
@@ -149,8 +149,8 @@ public class FlowableFlatMapTest extends RxJavaTest {
     @Test
     public void flatMapTransformsException() {
         Flowable<Integer> onNext = Flowable.fromIterable(Arrays.asList(1, 2, 3));
-        Flowable<Integer> onComplete = Flowable.fromIterable(Arrays.asList(4));
-        Flowable<Integer> onError = Flowable.fromIterable(Arrays.asList(5));
+        Flowable<Integer> onComplete = Flowable.fromIterable(List.of(4));
+        Flowable<Integer> onError = Flowable.fromIterable(List.of(5));
 
         Flowable<Integer> source = Flowable.concat(
                 Flowable.fromIterable(Arrays.asList(10, 20, 30)),
@@ -187,8 +187,8 @@ public class FlowableFlatMapTest extends RxJavaTest {
     public void flatMapTransformsOnNextFuncThrows() {
         List<Throwable> errors = TestHelper.trackPluginErrors();
         try {
-            Flowable<Integer> onComplete = Flowable.fromIterable(Arrays.asList(4));
-            Flowable<Integer> onError = Flowable.fromIterable(Arrays.asList(5));
+            Flowable<Integer> onComplete = Flowable.fromIterable(List.of(4));
+            Flowable<Integer> onError = Flowable.fromIterable(List.of(5));
 
             Flowable<Integer> source = Flowable.fromIterable(Arrays.asList(10, 20, 30));
 
@@ -209,8 +209,8 @@ public class FlowableFlatMapTest extends RxJavaTest {
     @Test
     public void flatMapTransformsOnErrorFuncThrows() {
         Flowable<Integer> onNext = Flowable.fromIterable(Arrays.asList(1, 2, 3));
-        Flowable<Integer> onComplete = Flowable.fromIterable(Arrays.asList(4));
-        Flowable<Integer> onError = Flowable.fromIterable(Arrays.asList(5));
+        Flowable<Integer> onComplete = Flowable.fromIterable(List.of(4));
+        Flowable<Integer> onError = Flowable.fromIterable(List.of(5));
 
         Flowable<Integer> source = Flowable.error(new TestException());
 
@@ -226,10 +226,10 @@ public class FlowableFlatMapTest extends RxJavaTest {
     @Test
     public void flatMapTransformsOnCompletedFuncThrows() {
         Flowable<Integer> onNext = Flowable.fromIterable(Arrays.asList(1, 2, 3));
-        Flowable<Integer> onComplete = Flowable.fromIterable(Arrays.asList(4));
-        Flowable<Integer> onError = Flowable.fromIterable(Arrays.asList(5));
+        Flowable<Integer> onComplete = Flowable.fromIterable(List.of(4));
+        Flowable<Integer> onError = Flowable.fromIterable(List.of(5));
 
-        Flowable<Integer> source = Flowable.fromIterable(Arrays.<Integer> asList());
+        Flowable<Integer> source = Flowable.fromIterable(List.<Integer>of());
 
         Subscriber<Object> subscriber = TestHelper.mockSubscriber();
 
@@ -243,8 +243,8 @@ public class FlowableFlatMapTest extends RxJavaTest {
     @Test
     public void flatMapTransformsMergeException() {
         Flowable<Integer> onNext = Flowable.error(new TestException());
-        Flowable<Integer> onComplete = Flowable.fromIterable(Arrays.asList(4));
-        Flowable<Integer> onError = Flowable.fromIterable(Arrays.asList(5));
+        Flowable<Integer> onComplete = Flowable.fromIterable(List.of(4));
+        Flowable<Integer> onError = Flowable.fromIterable(List.of(5));
 
         Flowable<Integer> source = Flowable.fromIterable(Arrays.asList(10, 20, 30));
 
@@ -338,10 +338,10 @@ public class FlowableFlatMapTest extends RxJavaTest {
                 .subscribeOn(Schedulers.computation())
                 ;
 
-        Flowable<Integer> onComplete = composer(Flowable.fromIterable(Arrays.asList(4)), subscriptionCount, m)
+        Flowable<Integer> onComplete = composer(Flowable.fromIterable(List.of(4)), subscriptionCount, m)
                 .subscribeOn(Schedulers.computation());
 
-        Flowable<Integer> onError = Flowable.fromIterable(Arrays.asList(5));
+        Flowable<Integer> onError = Flowable.fromIterable(List.of(5));
 
         Flowable<Integer> source = Flowable.fromIterable(Arrays.asList(10, 20, 30));
 
