@@ -56,7 +56,7 @@ public class ObservableGroupByTest extends RxJavaTest {
         assertEquals(3, map.size());
         assertArrayEquals(Arrays.asList("one", "two", "six").toArray(), map.get(3).toArray());
         assertArrayEquals(Arrays.asList("four", "five").toArray(), map.get(4).toArray());
-        assertArrayEquals(Arrays.asList("three").toArray(), map.get(5).toArray());
+        assertArrayEquals(List.of("three").toArray(), map.get(5).toArray());
     }
 
     @Test
@@ -69,7 +69,7 @@ public class ObservableGroupByTest extends RxJavaTest {
         assertEquals(3, map.size());
         assertArrayEquals(Arrays.asList(3, 3, 3).toArray(), map.get(3).toArray());
         assertArrayEquals(Arrays.asList(4, 4).toArray(), map.get(4).toArray());
-        assertArrayEquals(Arrays.asList(5).toArray(), map.get(5).toArray());
+        assertArrayEquals(List.of(5).toArray(), map.get(5).toArray());
     }
 
     @Test
@@ -82,7 +82,7 @@ public class ObservableGroupByTest extends RxJavaTest {
         assertEquals(3, map.size());
         assertArrayEquals(Arrays.asList(3, 3, 3).toArray(), map.get(3).toArray());
         assertArrayEquals(Arrays.asList(4, 4).toArray(), map.get(4).toArray());
-        assertArrayEquals(Arrays.asList(5).toArray(), map.get(5).toArray());
+        assertArrayEquals(List.of(5).toArray(), map.get(5).toArray());
     }
 
     @Test
@@ -1443,9 +1443,9 @@ public class ObservableGroupByTest extends RxJavaTest {
                 return i % 2;
             }
         }).subscribe(outer);
-        assertEquals(Arrays.asList(e), outer.errors());
-        assertEquals(Arrays.asList(e), inner1.errors());
-        assertEquals(Arrays.asList(e), inner2.errors());
+        assertEquals(List.of(e), outer.errors());
+        assertEquals(List.of(e), inner1.errors());
+        assertEquals(List.of(e), inner2.errors());
     }
 
     @Test
