@@ -761,7 +761,7 @@ public class ObservableReplayTest extends RxJavaTest {
         buf.next(2);
         test.advanceTimeBy(1, TimeUnit.SECONDS);
         buf.collect(values);
-        Assert.assertEquals(Arrays.asList(2), values);
+        Assert.assertEquals(List.of(2), values);
 
         buf.next(3);
         buf.next(4);
@@ -774,7 +774,7 @@ public class ObservableReplayTest extends RxJavaTest {
 
         values.clear();
         buf.collect(values);
-        Assert.assertEquals(Arrays.asList(5), values);
+        Assert.assertEquals(List.of(5), values);
         Assert.assertFalse(buf.hasCompleted());
 
         test.advanceTimeBy(2, TimeUnit.SECONDS);
@@ -804,7 +804,7 @@ public class ObservableReplayTest extends RxJavaTest {
         buf.next(2);
         test.advanceTimeBy(1, TimeUnit.SECONDS);
         buf.collect(values);
-        Assert.assertEquals(Arrays.asList(2), values);
+        Assert.assertEquals(List.of(2), values);
 
         buf.next(3);
         buf.next(4);
@@ -817,7 +817,7 @@ public class ObservableReplayTest extends RxJavaTest {
 
         values.clear();
         buf.collect(values);
-        Assert.assertEquals(Arrays.asList(5), values);
+        Assert.assertEquals(List.of(5), values);
         Assert.assertFalse(buf.hasCompleted());
         Assert.assertFalse(buf.hasError());
 
