@@ -162,7 +162,7 @@ public class ObservableToMultimapTest extends RxJavaTest {
 
         Map<Integer, Collection<String>> expected = new HashMap<>();
         expected.put(2, Arrays.asList("cc", "dd"));
-        expected.put(3, new HashSet<>(Arrays.asList("eee")));
+        expected.put(3, new HashSet<>(List.of("eee")));
 
         mapped.subscribe(objectObserver);
 
@@ -407,7 +407,7 @@ public class ObservableToMultimapTest extends RxJavaTest {
 
         Map<Integer, Collection<String>> expected = new HashMap<>();
         expected.put(2, Arrays.asList("cc", "dd"));
-        expected.put(3, new HashSet<>(Arrays.asList("eee")));
+        expected.put(3, new HashSet<>(List.of("eee")));
 
         mapped.subscribe(singleObserver);
 
