@@ -618,7 +618,7 @@ public class SingleFlatMapIterableFlowableTest extends RxJavaTest {
 
     @Test
     public void onSuccessRequestRace() {
-        List<Object> list = Arrays.asList(1);
+        List<Object> list = List.of(1);
         for (int i = 0; i < TestHelper.RACE_DEFAULT_LOOPS; i++) {
 
             SingleSubject<Integer> ss = SingleSubject.create();
