@@ -86,11 +86,11 @@ public class FlowableConsumersTest implements Consumer<Object>, Action {
 
         assertTrue(composite.size() > 0);
 
-        assertEquals(Arrays.<Object>asList(1), events);
+        assertEquals(List.<Object>of(1), events);
 
         processor.onComplete();
 
-        assertEquals(Arrays.<Object>asList(1), events);
+        assertEquals(List.<Object>of(1), events);
 
         assertEquals(0, composite.size());
     }
@@ -108,11 +108,11 @@ public class FlowableConsumersTest implements Consumer<Object>, Action {
 
         assertTrue(composite.size() > 0);
 
-        assertEquals(Arrays.<Object>asList(1), events);
+        assertEquals(List.<Object>of(1), events);
 
         processor.onComplete();
 
-        assertEquals(Arrays.<Object>asList(1), events);
+        assertEquals(List.<Object>of(1), events);
 
         assertEquals(0, composite.size());
     }
@@ -132,7 +132,7 @@ public class FlowableConsumersTest implements Consumer<Object>, Action {
 
         assertTrue(composite.size() > 0);
 
-        assertEquals(Arrays.<Object>asList(1), events);
+        assertEquals(List.<Object>of(1), events);
 
         processor.onError(new IOException());
 
@@ -155,7 +155,7 @@ public class FlowableConsumersTest implements Consumer<Object>, Action {
 
         assertTrue(composite.size() > 0);
 
-        assertEquals(Arrays.<Object>asList(1), events);
+        assertEquals(List.<Object>of(1), events);
 
         processor.onComplete();
 
@@ -177,7 +177,7 @@ public class FlowableConsumersTest implements Consumer<Object>, Action {
 
         assertTrue(composite.size() > 0);
 
-        assertEquals(Arrays.<Object>asList(1), events);
+        assertEquals(List.<Object>of(1), events);
 
         processor.onError(new IOException());
 
@@ -277,7 +277,7 @@ public class FlowableConsumersTest implements Consumer<Object>, Action {
             processor.onNext(1);
             processor.onComplete();
 
-            assertEquals(Arrays.asList(1), events);
+            assertEquals(List.of(1), events);
 
             TestHelper.assertUndeliverable(errors, 0, IOException.class);
         } finally {
