@@ -142,7 +142,7 @@ public class ObservableSubscriberTest extends RxJavaTest {
             }
         });
 
-        assertEquals(Arrays.asList(1), list);
+        assertEquals(List.of(1), list);
     }
 
     @Test
@@ -161,7 +161,7 @@ public class ObservableSubscriberTest extends RxJavaTest {
             }
         });
 
-        assertEquals(Arrays.asList(100), list);
+        assertEquals(List.of(100), list);
     }
 
     @Test
